--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
 <title>title practice page</title>
 </head>
 <body>
+  <h1>test header</h1>
 <p>paragraph test page</p>
-<h1>test header</h1>
-</body>
+  <ol>
+    <li>Pizza</li>
+    <li>burgers</li>
+    <li>more</li>
+  </ol>
+  </body>
 </html>
